# ai-voice-assistant

./: README.md  app copy.py  app-groq.py  app.py  groq-llm.py  human-text.txt  llm-text.txt  main.py  pyproject.toml  requirements.txt
src/: audio-recorder.py  llm.py  play-audio.py  speech-to-text.py  text-to-speech.py
